Fix error string wrapping

--- a/public/style.css
+++ b/public/style.css
@@ -25,11 +25,7 @@ body {
   width: 80%;
   max-width: 750px;
   margin: 0 auto;
-}
-
-.d-flex {
-  display: flex;
-  align-items: center;
+  padding: 2em 0;
 }
 
 .menu-container {
@@ -37,7 +33,7 @@ body {
 }
 
 .menu {
-  margin-top: 15vh;
+  margin-top: 10vh;
   padding-left: 0;
   text-align: center;
 }
